ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "tutum-hello-world.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutum-hello-world
                port:
                  number: 80
    - host: "nginx-hello-world.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-hello-world
                port:
                  number: 80
    - host: "nestjs.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs-demo
                port:
                  number: 3000
